--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ baseurl: ""
 # Website Header, Description, Footer year and text. 
 # If you are deleting this, make sure you remove it from HTML files too 
 heading: Rahul Rajeev # Change this 
-content: Hey Rahul Rajeev here. I am a modern renaissance man
+content: Writer, Artist, Design Thinker, Strategist, & Head of Operations at Dreamflakes
 copyright:  
   year: © 2022
   msg: Contents under CC-BY-NC 
