--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,6 @@
-{}
+{
+  "promptDelete": false,
+  "newFileLocation": "folder",
+  "newFileFolderPath": "_notes",
+  "attachmentFolderPath": "./assets/"
+}
